# eosin

./: .gitignore  README.md  pyproject.toml  ruff.toml  tox.ini
best-statement-parser-ever/: __init__.py  __main__.py  parser.py  utils.py
eosin/: __init__.py  __main__.py  parser.py  utils.py
tests/: test_parser.py
