[tool.poetry]
name = "eosin"
version = "0.1.1"
description = "Library to extract data from any bank statement."
authors = ["Moulik <zstriker2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.4"
pandas = "^2.2.3"
dateparser = "^1.2.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
