[tool.poetry]
name = "eosin"
version = "0.1.1"
description = "Library to extract data from any bank statement."
authors = ["Moulik <zstriker2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.4"
pandas = "^2.2.3"
dateparser = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.21.2"
pylint = "^3.3.1"
pyright = "^1.1.383"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
